New layout for a lot of the components

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,8 +1,16 @@
-{
-  "origin": {
-    "title": "🌎 Founder’s Origin Story: How Visto Seguro Was Born",
-    "body": "My first immigration client wasn’t a stranger.\nShe was someone I fell in love with.\n\nMy wife is from Novo Hamburgo, Rio Grande do Sul, Brazil—and before she became my partner in life, she became my very first immigration case. [...] \n\nWe’re here to help people who have been denied a visa find clarity, confidence, and a second chance—just like she did.",
-    "whyTitle": "💬 Why We Exist",
+{  "toggleTo": {
+    "en": "🇧🇷 Português"  },
+  "topBanner": {
+  "financing": "Financing Options Available",
+  "address": "2562 Monroe Boulevard, Ogden, UT 84401",
+  "call": "Call",
+  "phone": "801-430-9184",
+  "spanish": "Se Habla Español",
+  "toggle": "Português"
+},"origin": {
+    "title": "Founder’s Origin Story: How Visto Seguro Was Born",
+    "body": "My first immigration client wasn’t a stranger.\nShe was someone I fell in love with.\n\nMy wife is from Novo Hamburgo, Rio Grande do Sul, Brazil—and before she became my partner in life, she became my very first immigration case. \n\nWe’re here to help people who have been denied a visa find clarity, confidence, and a second chance—just like she did.",
+    "whyTitle": "Why We Exist",
     "whyBody": "Visto Seguro exists to empower people who have been denied a U.S. visitor visa with the tools, insight, and strategy they need to try again—smarter and stronger. We believe that rejection doesn’t mean the end. With the right plan, it can be a new beginning.\n\nWe’re here to replace confusion with clarity—and disappointment with direction."
   },
   "hero": {
@@ -25,8 +33,15 @@
     "item4": "Interview coaching and supporting documentation guidance"
   },
   "bio": {
-    "name": "🇺🇸 Kevin G. Richards",
+    "name": "Kevin G. Richards",
+  "sectionTitle": ["Meet the", "Attorney"],
     "title": "Founder & Lead Attorney – Visto Seguro\nLicensed U.S. Immigration Attorney with 36+ Years of Experience",
     "body": "Kevin G. Richards is a seasoned U.S. immigration attorney with over 36 years of experience practicing exclusively in immigration law. His journey began long before law school, when he married his wife—originally from Novo Hamburgo, Rio Grande do Sul, Brazil—who became his very first immigration client. That personal experience sparked a lifelong dedication to helping individuals and families navigate the complexities of U.S. immigration.\n\nHe is licensed to practice in all federal immigration courts of the United States, including the Board of Immigration Appeals (BIA). Over the course of his career, Kevin has successfully handled thousands of immigration cases, including:\n• Adjustment of status (green cards)\n• Consular processing\n• Waivers of inadmissibility (including 212 and 601)\n• Removal (deportation) defense, including 42B non-LPR cancellation\n• Complex asylum and humanitarian cases\n\nKevin has represented clients from all over the world—including Canada, Germany, Russia, Afghanistan, Iran, Kenya, and virtually every country in North and South America. His reputation is built on compassion, legal precision, and a deep personal understanding of the immigrant experience.\n\nToday, he splits his time between Brazil and the United States, offering clients bilingual service and strategic visa support tailored for Brazilian citizens. As the founder of Visto Seguro, Kevin leads Brazil’s only visa advisory firm that is attorney-based and legally grounded.\n\nVisto Seguro is not a visa “agency”—it’s a legal service led by an American immigration attorney with decades of experience. We don’t guess. We analyze, advise, and fight for your approval based on strategy and law."
-  }
+  },"footer": {
+  "lawSite": "Visit our main U.S. law office site",
+  "whatsapp": "Message us on WhatsApp",
+  "tagline": "Legal visa support for Brazilian citizens",
+  "location": "Ogden, Utah – U.S.A.",
+  "copyright": "© {{year}} Visto Seguro"
+}
 }
