--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -1,8 +1,17 @@
-{
-  "origin": {
-    "title": "🌎 A Origem do Visto Seguro",
-    "body": "Minha primeira cliente de imigração não era uma estranha.\nEra alguém por quem eu me apaixonei.\n\nMinha esposa é de Novo Hamburgo, Rio Grande do Sul — e antes de se tornar minha parceira de vida, foi meu primeiro caso de imigração. [...] \n\nEstamos aqui para ajudar pessoas que tiveram o visto negado a encontrar clareza, confiança e uma segunda chance — assim como ela teve.",
-    "whyTitle": "💬 Por Que Existimos",
+{  "toggleTo": {
+    "pt": "🇺🇸 English"
+  },
+  "topBanner": {
+  "financing": "Opções de Financiamento Disponíveis",
+  "address": "2562 Boulevard Monroe, Ogden, UT 84401",
+  "call": "Ligue",
+  "phone": "801-430-9184",
+  "spanish": "Atendimento em Espanhol",
+  "toggle": "English"
+},"origin": {
+    "title": "A Origem do Visto Seguro",
+    "body": "Minha primeira cliente de imigração não era uma estranha.\nEra alguém por quem eu me apaixonei.\n\nMinha esposa é de Novo Hamburgo, Rio Grande do Sul — e antes de se tornar minha parceira de vida, foi meu primeiro caso de imigração. \n\nEstamos aqui para ajudar pessoas que tiveram o visto negado a encontrar clareza, confiança e uma segunda chance — assim como ela teve.",
+    "whyTitle": "Por Que Existimos",
     "whyBody": "O Visto Seguro existe para capacitar pessoas que tiveram o visto de turismo negado pelos EUA, oferecendo ferramentas, estratégia e orientação para tentar novamente — de forma mais forte e inteligente. Acreditamos que a recusa não é o fim. Com o plano certo, pode ser um novo começo.\n\nEstamos aqui para substituir a confusão pela clareza — e a decepção pela direção certa."
   },
   "hero": {
@@ -25,8 +34,15 @@
     "item4": "Treinamento para a entrevista e orientação sobre documentos"
   },
   "bio": {
-    "name": "🇧🇷 Kevin G. Richards",
+    "name": "Kevin G. Richards",
+  "sectionTitle": ["Conheça o", "Advogado"],
     "title": "Fundador e Advogado Responsável – Visto Seguro\nAdvogado de Imigração nos EUA com Mais de 36 Anos de Experiência",
     "body": "Kevin G. Richards é um advogado de imigração licenciado nos Estados Unidos com mais de 36 anos de experiência exclusiva na área de direito imigratório. Sua trajetória começou antes mesmo da faculdade de Direito, quando se casou com sua esposa — natural de Novo Hamburgo, Rio Grande do Sul — que se tornou sua primeira cliente de imigração. Essa experiência pessoal despertou uma dedicação vitalícia a ajudar pessoas e famílias a enfrentar as complexidades da imigração americana.\n\nEle possui licença para atuar em todos os tribunais federais de imigração dos Estados Unidos, incluindo a Junta de Apelações de Imigração (BIA). Ao longo de sua carreira, Kevin já atendeu milhares de casos, incluindo:\n• Ajuste de status (green cards)\n• Processos consulares\n• Perdões de inadmissibilidade (incluindo 212 e 601)\n• Defesa contra deportação, incluindo 42B (cancelamento de deportação para não residentes permanentes)\n• Casos complexos de asilo e humanitários\n\nKevin já representou clientes de todo o mundo — incluindo Canadá, Alemanha, Rússia, Afeganistão, Irã, Quênia e praticamente todos os países das Américas. Sua reputação é baseada em empatia, precisão jurídica e uma profunda compreensão pessoal da experiência do imigrante.\n\nHoje, ele divide seu tempo entre o Brasil e os Estados Unidos, oferecendo atendimento bilíngue e suporte estratégico voltado para cidadãos brasileiros. Como fundador da Visto Seguro, Kevin lidera a única assessoria de vistos no Brasil com base jurídica e conduzida por um advogado americano de imigração.\n\nO Visto Seguro não é uma “agência” comum — é um serviço jurídico liderado por um advogado com décadas de experiência. Aqui, não adivinhamos. Analisamos, orientamos e lutamos por sua aprovação com base em estratégia e lei."
-  }
+  },"footer": {
+  "lawSite": "Visite nosso site jurídico principal",
+  "whatsapp": "Fale conosco no WhatsApp",
+  "tagline": "Apoio jurídico para brasileiros em busca de visto americano",
+  "location": "Ogden, Utah – EUA",
+  "copyright": "© {{year}} Visto Seguro"
+}
 }
