New Components for Pricing, New headers, icons

--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -9,6 +9,8 @@
   "spanish": "Atendimento em Espanhol",
   "toggle": "English"
 },"origin": {
+        "headingPart1": "Por que",
+    "headingPart2": "Existimos",
     "title": "A Origem do Visto Seguro",
     "body": "Minha primeira cliente de imigração não era uma estranha.\nEra alguém por quem eu me apaixonei.\n\nMinha esposa é de Novo Hamburgo, Rio Grande do Sul — e antes de se tornar minha parceira de vida, foi meu primeiro caso de imigração. \n\nEstamos aqui para ajudar pessoas que tiveram o visto negado a encontrar clareza, confiança e uma segunda chance — assim como ela teve.",
     "whyTitle": "Por Que Existimos",
@@ -23,9 +25,12 @@
     "about": "Sobre",
     "services": "Serviços",
     "why": "Por que Visto Seguro",
-    "contact": "Contato"
+    "contact": "Contato",
+    "pricing": "Planos e Preços"
   },
   "how": {
+    "headingPart1": "Como nós",
+    "headingPart2": "Ajudamos",
     "title": "Nós não apenas ajudamos você a reaplicar — ajudamos a entender por que foi negado e como ter sucesso na próxima vez.",
     "subtitle": "Na Visto Seguro, somos especializados em análise jurídica e planejamento estratégico para brasileiros que tiveram o visto de turismo dos EUA negado. Liderado por um advogado de imigração licenciado nos EUA, oferecemos:",
     "item1": "Revisão completa do seu DS-160 e histórico da entrevista",
@@ -34,16 +39,20 @@
     "item4": "Treinamento para a entrevista e orientação sobre documentos"
   },
   "bio": {
+        "headingPart1": "Conheça o",
+    "headingPart2": "Advogado",
     "name": "Kevin G. Richards",
   "sectionTitle": ["Conheça o", "Advogado"],
     "title": "Fundador e Advogado Responsável – Visto Seguro\nAdvogado de Imigração nos EUA com Mais de 36 Anos de Experiência",
-    "body": "Kevin G. Richards é um advogado de imigração licenciado nos Estados Unidos com mais de 36 anos de experiência exclusiva na área de direito imigratório. Sua trajetória começou antes mesmo da faculdade de Direito, quando se casou com sua esposa — natural de Novo Hamburgo, Rio Grande do Sul — que se tornou sua primeira cliente de imigração. Essa experiência pessoal despertou uma dedicação vitalícia a ajudar pessoas e famílias a enfrentar as complexidades da imigração americana.\n\nEle possui licença para atuar em todos os tribunais federais de imigração dos Estados Unidos, incluindo a Junta de Apelações de Imigração (BIA). Ao longo de sua carreira, Kevin já atendeu milhares de casos, incluindo:\n• Ajuste de status (green cards)\n• Processos consulares\n• Perdões de inadmissibilidade (incluindo 212 e 601)\n• Defesa contra deportação, incluindo 42B (cancelamento de deportação para não residentes permanentes)\n• Casos complexos de asilo e humanitários\n\nKevin já representou clientes de todo o mundo — incluindo Canadá, Alemanha, Rússia, Afeganistão, Irã, Quênia e praticamente todos os países das Américas. Sua reputação é baseada em empatia, precisão jurídica e uma profunda compreensão pessoal da experiência do imigrante.\n\nHoje, ele divide seu tempo entre o Brasil e os Estados Unidos, oferecendo atendimento bilíngue e suporte estratégico voltado para cidadãos brasileiros. Como fundador da Visto Seguro, Kevin lidera a única assessoria de vistos no Brasil com base jurídica e conduzida por um advogado americano de imigração.\n\nO Visto Seguro não é uma “agência” comum — é um serviço jurídico liderado por um advogado com décadas de experiência. Aqui, não adivinhamos. Analisamos, orientamos e lutamos por sua aprovação com base em estratégia e lei."
+    "body": "Kevin G. Richards é um advogado de imigração licenciado nos Estados Unidos com mais de 36 anos de experiência exclusiva na área de direito imigratório. Sua trajetória começou antes mesmo da faculdade de Direito, quando se casou com sua esposa — natural de Novo Hamburgo, Rio Grande do Sul — que se tornou sua primeira cliente de imigração. Essa experiência pessoal despertou uma dedicação vitalícia a ajudar pessoas e famílias a enfrentar as complexidades da imigração americana.\n\nEle possui licença para atuar em todos os tribunais federais de imigração dos Estados Unidos, incluindo a Junta de Apelações de Imigração (BIA). Ao longo de sua carreira, Kevin já atendeu milhares de casos, incluindo:\n Ajuste de status (green cards)\n Processos consulares\n Perdões de inadmissibilidade (incluindo 212 e 601)\n Defesa contra deportação, incluindo 42B (cancelamento de deportação para não residentes permanentes)\n Casos complexos de asilo e humanitários\n\nKevin já representou clientes de todo o mundo — incluindo Canadá, Alemanha, Rússia, Afeganistão, Irã, Quênia e praticamente todos os países das Américas. Sua reputação é baseada em empatia, precisão jurídica e uma profunda compreensão pessoal da experiência do imigrante.\n\nHoje, ele divide seu tempo entre o Brasil e os Estados Unidos, oferecendo atendimento bilíngue e suporte estratégico voltado para cidadãos brasileiros. Como fundador da Visto Seguro, Kevin lidera a única assessoria de vistos no Brasil com base jurídica e conduzida por um advogado americano de imigração.\n\nO Visto Seguro não é uma “agência” comum — é um serviço jurídico liderado por um advogado com décadas de experiência. Aqui, não adivinhamos. Analisamos, orientamos e lutamos por sua aprovação com base em estratégia e lei."
   },"pricing": {
+        "headingPart1": "Planos e Preços",
+    "headingPart2": "Visto Seguro",
   "title": "Planos e Preços do Visto Seguro",
   "description": "Com o Visto Seguro, a estratégia jurídica para brasileiros que solicitam novamente o visto de turista após uma recusa, você estará pronto, informado e capacitado para a sua próxima solicitação ou entrevista. Escolha entre:",
   "tier1": {
     "title": "NÍVEL 1",
-    "price": "US$ 200",
+    "price": "USD $200",
     "ideal": "Ideal para clientes que desejam entender por que seu visto foi negado e receber um roteiro estratégico completo antes de solicitar novamente.",
     "features": [
       "Revisão detalhada do DS-160 e recomendações de correção",
@@ -57,24 +66,25 @@
   },
   "tier2": {
     "title": "NÍVEL 2",
-    "price": "US$ 550",
+    "price": "USD $550",
     "ideal": "Ideal para requerentes com recusas anteriores que buscam suporte completo de reaplicação preparado por advogado. Inclui tudo o que está na camada 1, além de:",
     "features": [
       "DS-160 preparado ou revisado por advogado",
       "Montagem de todos os documentos de apoio:",
-      "• Verificação de emprego ou renda",
-      "• Extratos bancários, bens, vínculos familiares",
-      "• Itinerário de viagem, carta-convite (se aplicável)",
+      " Verificação de emprego ou renda",
+      " Extratos bancários, bens, vínculos familiares",
+      " Itinerário de viagem, carta-convite (se aplicável)",
       "Carta de apresentação elaborada por advogado",
-      "• Explique o motivo da nova solicitação",
-      "• Destaca os laços fortes e a intenção de retornar",
-      "• Demonstra conformidade com o §214(b)",
+      " Explique o motivo da nova solicitação",
+      " Destaca os laços fortes e a intenção de retornar",
+      " Demonstra conformidade com o §214(b)",
       "Lista de verificação final antes de agendar uma entrevista"
     ]
   },
   "addOn": {
     "title": "Serviços Adicionais",
-    "price": "US$ 100",
+    "price": "USD $100",
+    "ideal": "Serviços adicionais estão disponíveis para ambos os pacotes:",
     "description": "Serviços adicionais estão disponíveis para ambos os pacotes:",
     "features": [
       "Entrevista simulada via Zoom (sessão de 20 minutos)",
