--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,6 +8,9 @@
   "spanish": "Se Habla Español",
   "toggle": "Português"
 },"origin": {
+      "headingPart1": "Why we",
+  "headingPart2": "Exist",
+        "sectionTitle": "Why We Exist",
     "title": "Founder’s Origin Story: How Visto Seguro Was Born",
     "body": "My first immigration client wasn’t a stranger.\nShe was someone I fell in love with.\n\nMy wife is from Novo Hamburgo, Rio Grande do Sul, Brazil—and before she became my partner in life, she became my very first immigration case. \n\nWe’re here to help people who have been denied a visa find clarity, confidence, and a second chance—just like she did.",
     "whyTitle": "Why We Exist",
@@ -22,9 +25,12 @@
     "about": "About",
     "services": "Services",
     "why": "Why Visto Seguro",
-    "contact": "Contact"
+    "contact": "Contact",
+    "pricing": "Plans and Pricing"
   },
   "how": {
+  "headingPart1": "How we",
+  "headingPart2": "Help",
     "title": "We don’t just help you reapply — we help you understand why you were denied and how to succeed next time.",
     "subtitle": "At Visto Seguro, we specialize in legal analysis and strategic planning for Brazilian citizens denied a U.S. tourist visa. Led by a U.S. immigration attorney, we provide:",
     "item1": "A full review of your DS-160 and visa interview history",
@@ -33,16 +39,21 @@
     "item4": "Interview coaching and supporting documentation guidance"
   },
   "bio": {
+      "headingPart1": "Meet the",
+  "headingPart2": "Attorney",
     "name": "Kevin G. Richards",
   "sectionTitle": ["Meet the", "Attorney"],
     "title": "Founder & Lead Attorney – Visto Seguro\nLicensed U.S. Immigration Attorney with 36+ Years of Experience",
-    "body": "Kevin G. Richards is a seasoned U.S. immigration attorney with over 36 years of experience practicing exclusively in immigration law. His journey began long before law school, when he married his wife—originally from Novo Hamburgo, Rio Grande do Sul, Brazil—who became his very first immigration client. That personal experience sparked a lifelong dedication to helping individuals and families navigate the complexities of U.S. immigration.\n\nHe is licensed to practice in all federal immigration courts of the United States, including the Board of Immigration Appeals (BIA). Over the course of his career, Kevin has successfully handled thousands of immigration cases, including:\n• Adjustment of status (green cards)\n• Consular processing\n• Waivers of inadmissibility (including 212 and 601)\n• Removal (deportation) defense, including 42B non-LPR cancellation\n• Complex asylum and humanitarian cases\n\nKevin has represented clients from all over the world—including Canada, Germany, Russia, Afghanistan, Iran, Kenya, and virtually every country in North and South America. His reputation is built on compassion, legal precision, and a deep personal understanding of the immigrant experience.\n\nToday, he splits his time between Brazil and the United States, offering clients bilingual service and strategic visa support tailored for Brazilian citizens. As the founder of Visto Seguro, Kevin leads Brazil’s only visa advisory firm that is attorney-based and legally grounded.\n\nVisto Seguro is not a visa “agency”—it’s a legal service led by an American immigration attorney with decades of experience. We don’t guess. We analyze, advise, and fight for your approval based on strategy and law."
+    "body": "Kevin G. Richards is a seasoned U.S. immigration attorney with over 36 years of experience practicing exclusively in immigration law. His journey began long before law school, when he married his wife—originally from Novo Hamburgo, Rio Grande do Sul, Brazil—who became his very first immigration client. That personal experience sparked a lifelong dedication to helping individuals and families navigate the complexities of U.S. immigration.\n\nHe is licensed to practice in all federal immigration courts of the United States, including the Board of Immigration Appeals (BIA). Over the course of his career, Kevin has successfully handled thousands of immigration cases, including:\n Adjustment of status (green cards)\n Consular processing\n Waivers of inadmissibility (including 212 and 601)\n Removal (deportation) defense, including 42B non-LPR cancellation\n Complex asylum and humanitarian cases\n\nKevin has represented clients from all over the world—including Canada, Germany, Russia, Afghanistan, Iran, Kenya, and virtually every country in North and South America. His reputation is built on compassion, legal precision, and a deep personal understanding of the immigrant experience.\n\nToday, he splits his time between Brazil and the United States, offering clients bilingual service and strategic visa support tailored for Brazilian citizens. As the founder of Visto Seguro, Kevin leads Brazil’s only visa advisory firm that is attorney-based and legally grounded.\n\nVisto Seguro is not a visa “agency”—it’s a legal service led by an American immigration attorney with decades of experience. We don’t guess. We analyze, advise, and fight for your approval based on strategy and law."
   },"pricing": {
+          "headingPart1": "Visto Seguro",
+  "headingPart2": "Plans and Pricing",
+        "sectionTitle": ["Visto Seguro", "Plans and Pricing"],
   "title": "Visto Seguro Plans and Pricing",
   "description": "With Visto Seguro, the legal strategy for Brazilians reapplying after a U.S. tourist visa denial, you’ll go into your next application or interview ready, informed, and empowered. Choose from:",
   "tier1": {
     "title": "TIER 1",
-    "price": "US $200",
+    "price": "USD $200",
     "ideal": "Ideal for clients who want to understand why their visa was denied and receive a complete strategic roadmap before reapplying.",
     "features": [
       "Detailed review of the DS-160 and correction recommendations",
@@ -56,24 +67,25 @@
   },
   "tier2": {
     "title": "TIER 2",
-    "price": "US $550",
+    "price": "USD $550",
     "ideal": "Ideal for applicants with prior denials seeking full attorney-prepared reapplication support. Includes everything in TIER 1, plus:",
     "features": [
       "Attorney-prepared or reviewed DS-160",
       "Assembly of all supporting documents:",
-      "• Employment or income verification",
-      "• Bank statements, assets, family ties",
-      "• Travel itinerary, letter of invitation (if applicable)",
+      " Employment or income verification",
+      " Bank statements, assets, family ties",
+      " Travel itinerary, letter of invitation (if applicable)",
       "Attorney-drafted cover letter",
-      "• Explains the reason for reapplying",
-      "• Highlights strong ties and intent to return",
-      "• Demonstrates compliance with §214(b)",
+      " Explains the reason for reapplying",
+      " Highlights strong ties and intent to return",
+      " Demonstrates compliance with §214(b)",
       "Final checklist before scheduling an interview"
     ]
   },
   "addOn": {
     "title": "Additional Services",
-    "price": "US $100",
+    "price": "USD $100",
+    "ideal": "Additional services are available for both packages:",
     "description": "Additional services are available for both packages:",
     "features": [
       "Mock interview via Zoom (20-minute session",
