Updated Navbar and Footer

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,8 +8,8 @@
   "spanish": "Se Habla Español",
   "toggle": "Português"
 },"origin": {
-      "headingPart1": "Why we",
-  "headingPart2": "Exist",
+      "headingPart1": "About",
+  "headingPart2": "Us",
         "sectionTitle": "Why We Exist",
     "title": "Founder’s Origin Story: How Visto Seguro Was Born",
     "body": "My first immigration client wasn’t a stranger.\nShe was someone I fell in love with.\n\nMy wife is from Novo Hamburgo, Rio Grande do Sul, Brazil—and before she became my partner in life, she became my very first immigration case. \n\nWe’re here to help people who have been denied a visa find clarity, confidence, and a second chance—just like she did.",
