--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -9,8 +9,8 @@
   "spanish": "Atendimento em Espanhol",
   "toggle": "English"
 },"origin": {
-        "headingPart1": "Por que",
-    "headingPart2": "Existimos",
+        "headingPart1": "Sobre",
+    "headingPart2": "Nós",
     "title": "A Origem do Visto Seguro",
     "body": "Minha primeira cliente de imigração não era uma estranha.\nEra alguém por quem eu me apaixonei.\n\nMinha esposa é de Novo Hamburgo, Rio Grande do Sul — e antes de se tornar minha parceira de vida, foi meu primeiro caso de imigração. \n\nEstamos aqui para ajudar pessoas que tiveram o visto negado a encontrar clareza, confiança e uma segunda chance — assim como ela teve.",
     "whyTitle": "Por Que Existimos",
