Text update for Como nos ajudamos

--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -29,7 +29,7 @@
     "pricing": "Planos e Preços"
   },
   "how": {
-    "headingPart1": "Como nós",
+    "headingPart1": "Como",
     "headingPart2": "Ajudamos",
     "title": "Nós não apenas ajudamos você a reaplicar — ajudamos a entender por que foi negado e como ter sucesso na próxima vez.",
     "subtitle": "Na Visto Seguro, somos especializados em análise jurídica e planejamento estratégico para brasileiros que tiveram o visto de turismo dos EUA negado. Liderado por um advogado de imigração licenciado nos EUA, oferecemos:",
